2006-05-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchi/ : Update with InChI 1.01 pre-release.

	* src/formats/inchi_api.h: Ditto.

2006-05-16 Chris Morley <ob@gaseq.co.uk>

	* src/mol.cpp: Remove BeginModify and EndModify from AddAtom(),
	 NewAtom() and AddBond(). Doesn't seem sensible to call 
	 EndModify() (which calls Kekulize()) before all the molecule
	 is there. The change should speed up conversion of large molecules.
	 This only change for this revison for easy reversion if
	 this is too drastic a change.
	 
2006-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/patty.cpp, src/kekulize.cpp, src/fingerprint.cpp,
	src/rotor.cpp, src/chains.cpp, src/parsmart.cpp, src/chiral.cpp,
	src/bitvec.cpp, src/main.cpp, src/grid.cpp, src/mol.cpp,
	src/bondtyper.cpp: Update to remove #ifdef for SSTREAM
	(stringstream is ISO C++ and widely accepted). Remove other
	spurious #ifdef's where possible.

2006-05-11  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/cml.sh, test/cmltest/roundtrip.sh, test/cmltest/test.sh:
	Provide more fine-grained test errors and messages.

	* test/roundtrip.cpp: Finding extra molecules in a file should
	exit with an error.

	* src/mol.cpp (GetMolWt, GetExactMass): Simplify and improve
	performance by handling explicit hydrogens like any other explicit
	atom. Functions identically to previous version on regression
	test. Improves performance on isolated protons or bridging hydrogens.

2006-05-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/formula.cpp, test/files/formularesults.txt:
	New test for OBMol::GetFormula(), OBMol::GetMolWt(), and
	OBMol::GetExactMass().

	* src/mol.cpp (GetMolWt, GetExactMass): Fix PR#1485580. Missing
	parentheses in calculating # of implicit + explicit
	hydrogens. Thanks to Noel for suggestion.

	* src/dlhandler_unix.cpp (findFiles): If environment variable
	BABEL_LIBDIR is set, ignore compiled-in default. (User setting
	should always take precedence)
